crates/lattice-actor/tests/ui/derive/missing_response.stderr
error: `Request` requires `#[request(response = Type)]`
 --> tests/ui/derive/missing_response.rs:2:8
  |
2 | struct MissingResponse;
  |        ^^^^^^^^^^^^^^^
