crates/lattice-actor/tests/ui/derive/missing_response.rs
#[derive(lattice_actor::Request)]
struct MissingResponse;

fn main() {}
